jumping problem fix on ios also some hero quality uprgades on iphone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,11 +6,8 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
-section,
-.globe,
-#bgVideo{
-  height: 100dvh;
-  min-height: 100dvh;
+section {
+  
 }
 
 #bgVideo {
